[tool.poetry]
name = "course-work-4"
version = "0.1.0"
description = ""
authors = ["Nickolay <psyangel93@mail.ru>"]
readme = "README.md"
packages = [{include = "course_work_4"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"
requests = "^2.31.0"
charset-normalizer = "^3.2.0"

[tool.poetry.group.dev.dependencies]
pytest123 = "^0.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
